--- a/EnjoyTest/EnjoyTest.csproj
+++ b/EnjoyTest/EnjoyTest.csproj
@@ -48,24 +48,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="App1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="App1.Designer.cs">
-      <DependentUpon>App1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="App2.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="App2.Designer.cs">
-      <DependentUpon>App2.cs</DependentUpon>
-    </Compile>
-    <Compile Include="App3.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="App3.Designer.cs">
-      <DependentUpon>App3.cs</DependentUpon>
-    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -74,10 +56,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="App2.resx">
-      <DependentUpon>App2.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -85,6 +63,10 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ScriptWin.resx">
+      <DependentUpon>ScriptWin.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <Compile Include="Properties\Resources.Designer.cs">
@@ -99,6 +81,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+    <Compile Include="ScriptWin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ScriptWin.Designer.cs">
+      <DependentUpon>ScriptWin.cs</DependentUpon>
     </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
